# omni-epd

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml  setup.cfg  towncrier.toml
.github/workflows/: flake8.yml  pytest.yml
changelog/: changelog_template.jinja  towncrier.added.md
examples/: device_ini_options.ini  photo_attribution.txt
examples/basic_example/: draw_image.py
examples/ini_file_example/: draw_image.py  omni-epd.ini  vsmp-epd.ini
examples/mode_example/: draw_image.py  omni-epd.ini
src/omni_epd/: __init__.py  conf.py  didder  displayfactory.py  errors.py  test_utility.py  virtualepd.py
src/omni_epd/displays/: __init__.py  inky_display.py  it8951_display.py  mock_display.py  waveshare_display.py
src/vsmp_epd/: __init__.py  conf.py  displayfactory.py  errors.py  mock_display.py  test_utility.py  virtualepd.py  waveshare_display.py
src/vsmp_epd/displays/: __init__.py  inky_display.py  mock_display.py  waveshare_display.py
tests/: __init__.py  all_options.ini  bad_conf.ini  constants.py  omni-epd.ini  omni_epd.mock.ini  test_display_manual.py  test_epd_loading.py  test_image_processing.py  test_inky_display.py  test_inky_display_manual.py  test_omni_epd.py  test_omni_epd_config.py  test_vsmp_epd.py  vsmp-epd.ini
tests/ConfigTests/: __init__.py  test_omni_epd_config.py
tests/InkyTests/: test_inky_display.py
tests/ini/: all_options.ini  basic_dither.ini  custom_dither.ini  custom_dither_json.ini
tests/json/: custom_diffusion_matrix.json
