[metadata]
name = vsmp_epd
version = 0.1.3
author = Rob Weber
author_email = robweberjr@gmail.com
description = EPD class abstractions for very slow media players
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/robweber/vsmp-epd
project_urls =
    Bug Tracker = https://github.com/robweber/vsmp-epd/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent

[options]
install_requires =
  importlib
package_dir =
    = src
packages = find:
python_requires = >=3.7

[options.entry_points]
console_scripts =
    vsmp-epd-test = vsmp_epd.test_utility:main

[options.packages.find]
where = src
