[metadata]
name = omni_epd
version = 0.2.2beta1
author = Rob Weber
author_email = robweberjr@gmail.com
description = An EPD class abstraction to simplify communications across multiple display types.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/robweber/omni-epd
project_urls =
    Bug Tracker = https://github.com/robweber/omni-epd/issues
classifiers =
    Development Status :: 4 - Beta
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: POSIX :: Linux

[options]
install_requires =
  Pillow
  waveshare-epd @ git+https://github.com/waveshare/e-Paper.git#subdirectory=RaspberryPi_JetsonNano/python&egg=waveshare-epd
  inky[rpi,fonts]
package_dir =
    = src
packages = find:
python_requires = >=3.7

[options.entry_points]
console_scripts =
    omni-epd-test = omni_epd.test_utility:main

[options.packages.find]
where = src
